adjusted profile view

--- a/Peng/Base.lproj/Main.storyboard
+++ b/Peng/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rS3-R9-Ivy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rS3-R9-Ivy">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -283,63 +283,62 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NHX-W1-mNH" userLabel="Info">
-                                <rect key="frame" x="16" y="20" width="568" height="300"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="282"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="circle_bg" translatesAutoresizingMaskIntoConstraints="NO" id="DCz-qo-KXv" userLabel="Image">
-                                        <rect key="frame" x="184" y="85" width="200" height="130"/>
-                                        <color key="backgroundColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="130" id="g5y-eN-OWJ"/>
-                                        </constraints>
-                                    </imageView>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="character_cowboy" translatesAutoresizingMaskIntoConstraints="NO" id="lc9-C0-4S6" userLabel="Character">
-                                        <rect key="frame" x="194" y="95" width="180" height="110"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Paul Woerner" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i3e-Cg-BlY" userLabel="Paul Woerner">
-                                        <rect key="frame" x="263" y="140" width="42" height="21"/>
-                                        <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="28"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paul Woerner" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0VN-ld-lrc">
+                                        <rect key="frame" x="0.5" y="190" width="600" height="28"/>
+                                        <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="24"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="&quot;Ich habe noch nie ein Spiel verloren.&quot;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t7x-Jf-Kas">
-                                        <rect key="frame" x="263" y="140" width="42" height="21"/>
-                                        <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Ich hab noch k ein Spiel verloren.&quot;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9m-yX-lfz">
+                                        <rect key="frame" x="0.0" y="218.5" width="600" height="32.5"/>
+                                        <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="14"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t13-z1-guN">
-                                        <rect key="frame" x="261" y="135" width="46" height="30"/>
-                                        <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="15"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tif-gl-KWg">
+                                        <rect key="frame" x="275" y="251" width="49" height="31"/>
+                                        <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="16"/>
                                         <state key="normal" title="ändern">
-                                            <color key="titleColor" red="0.20392156859999999" green="0.1960784314" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleColor" red="0.29019607843137252" green="0.38431372549019605" blue="0.37647058823529411" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                     </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle_bg" translatesAutoresizingMaskIntoConstraints="NO" id="yIk-wl-oXD" userLabel="Image">
+                                        <rect key="frame" x="150" y="20" width="300" height="150"/>
+                                        <color key="backgroundColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="150" id="hlx-IQ-U6y"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="character_cowboy" translatesAutoresizingMaskIntoConstraints="NO" id="c54-8R-UCd" userLabel="Character">
+                                        <rect key="frame" x="100" y="30" width="400" height="130"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="130" id="fnV-Fa-VSa"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="t7x-Jf-Kas" firstAttribute="leading" secondItem="NHX-W1-mNH" secondAttribute="leading" constant="10" id="1Xi-zP-mPf"/>
-                                    <constraint firstItem="lc9-C0-4S6" firstAttribute="trailing" secondItem="DCz-qo-KXv" secondAttribute="trailing" constant="-10" id="5Ex-cL-xyC"/>
-                                    <constraint firstAttribute="height" constant="300" id="9a2-iT-6Fw"/>
-                                    <constraint firstItem="DCz-qo-KXv" firstAttribute="leading" secondItem="NHX-W1-mNH" secondAttribute="leading" id="AS1-1I-IMk"/>
-                                    <constraint firstAttribute="centerX" secondItem="t7x-Jf-Kas" secondAttribute="centerX" id="BSa-LQ-Qhw"/>
-                                    <constraint firstItem="lc9-C0-4S6" firstAttribute="bottom" secondItem="DCz-qo-KXv" secondAttribute="bottom" constant="-10" id="DiF-Be-n3E"/>
-                                    <constraint firstItem="t7x-Jf-Kas" firstAttribute="top" secondItem="i3e-Cg-BlY" secondAttribute="bottom" constant="5" id="EZv-MM-XDE"/>
-                                    <constraint firstItem="DCz-qo-KXv" firstAttribute="top" secondItem="NHX-W1-mNH" secondAttribute="top" constant="40" id="IB8-q3-fsV"/>
-                                    <constraint firstItem="t13-z1-guN" firstAttribute="top" secondItem="t7x-Jf-Kas" secondAttribute="bottom" constant="4" id="QnU-D9-zP4"/>
-                                    <constraint firstItem="lc9-C0-4S6" firstAttribute="leading" secondItem="DCz-qo-KXv" secondAttribute="leading" constant="10" id="WdU-Xz-Skb"/>
-                                    <constraint firstAttribute="centerX" secondItem="t13-z1-guN" secondAttribute="centerX" id="Y3V-nK-r2w"/>
-                                    <constraint firstItem="lc9-C0-4S6" firstAttribute="top" secondItem="DCz-qo-KXv" secondAttribute="top" constant="10" id="Y8k-ST-1tT"/>
-                                    <constraint firstAttribute="trailing" secondItem="DCz-qo-KXv" secondAttribute="trailing" id="cS6-5H-o0b"/>
-                                    <constraint firstAttribute="centerX" secondItem="i3e-Cg-BlY" secondAttribute="centerX" id="iFc-u7-QKe"/>
-                                    <constraint firstItem="i3e-Cg-BlY" firstAttribute="top" secondItem="DCz-qo-KXv" secondAttribute="bottom" constant="20" id="oPk-aw-iGs"/>
-                                    <constraint firstAttribute="trailing" secondItem="t7x-Jf-Kas" secondAttribute="trailing" constant="10" id="xxx-JO-fPy"/>
+                                    <constraint firstItem="yIk-wl-oXD" firstAttribute="centerX" secondItem="NHX-W1-mNH" secondAttribute="centerX" id="DUA-r5-r2V"/>
+                                    <constraint firstItem="N9m-yX-lfz" firstAttribute="width" secondItem="NHX-W1-mNH" secondAttribute="width" id="TUc-P2-loT"/>
+                                    <constraint firstItem="Tif-gl-KWg" firstAttribute="top" secondItem="N9m-yX-lfz" secondAttribute="bottom" id="YBe-8n-iyN"/>
+                                    <constraint firstItem="0VN-ld-lrc" firstAttribute="width" secondItem="NHX-W1-mNH" secondAttribute="width" id="YIg-nb-bmE"/>
+                                    <constraint firstItem="N9m-yX-lfz" firstAttribute="centerX" secondItem="NHX-W1-mNH" secondAttribute="centerX" id="dTR-o7-Pqa"/>
+                                    <constraint firstItem="yIk-wl-oXD" firstAttribute="top" secondItem="NHX-W1-mNH" secondAttribute="top" constant="20" id="hKa-TP-TF0"/>
+                                    <constraint firstItem="0VN-ld-lrc" firstAttribute="top" secondItem="yIk-wl-oXD" secondAttribute="bottom" constant="20" id="jO2-Tf-UNJ"/>
+                                    <constraint firstItem="0VN-ld-lrc" firstAttribute="centerX" secondItem="NHX-W1-mNH" secondAttribute="centerX" id="n8p-RJ-xg0"/>
+                                    <constraint firstItem="N9m-yX-lfz" firstAttribute="top" secondItem="0VN-ld-lrc" secondAttribute="bottom" id="oMe-0z-IVD"/>
+                                    <constraint firstAttribute="bottom" secondItem="Tif-gl-KWg" secondAttribute="bottom" id="wOS-40-e0b"/>
+                                    <constraint firstItem="c54-8R-UCd" firstAttribute="centerY" secondItem="yIk-wl-oXD" secondAttribute="centerY" id="z0u-yh-s84"/>
+                                    <constraint firstItem="Tif-gl-KWg" firstAttribute="centerX" secondItem="NHX-W1-mNH" secondAttribute="centerX" id="zI2-GP-Lep"/>
+                                    <constraint firstItem="c54-8R-UCd" firstAttribute="centerX" secondItem="yIk-wl-oXD" secondAttribute="centerX" id="zUc-CT-tNj"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SgL-oI-SK1" userLabel="Neues Duell">
-                                <rect key="frame" x="0.0" y="225" width="600" height="150"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bMl-rN-dVc" userLabel="Neues Duell">
+                                <rect key="frame" x="0.0" y="302" width="600" height="150"/>
                                 <color key="backgroundColor" red="0.20392156859999999" green="0.1960784314" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="URA-R2-jKB"/>
+                                    <constraint firstAttribute="height" constant="150" id="sfa-2L-LV2"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="30"/>
                                 <state key="normal" title="HERAUSFORDERN"/>
@@ -348,18 +347,18 @@
                         <color key="backgroundColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="NHX-W1-mNH" firstAttribute="top" secondItem="cIm-e0-J51" secondAttribute="bottom" id="5fF-CN-KaF"/>
-                            <constraint firstItem="NHX-W1-mNH" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leadingMargin" id="8zF-LE-3u6"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="NHX-W1-mNH" secondAttribute="trailing" id="FQD-YN-Lxa"/>
-                            <constraint firstItem="SgL-oI-SK1" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leading" id="Osb-lS-QTS"/>
-                            <constraint firstAttribute="trailing" secondItem="SgL-oI-SK1" secondAttribute="trailing" id="bJs-cQ-mRV"/>
-                            <constraint firstItem="SgL-oI-SK1" firstAttribute="top" secondItem="NHX-W1-mNH" secondAttribute="bottom" constant="30" id="foo-X3-dt0"/>
+                            <constraint firstItem="NHX-W1-mNH" firstAttribute="width" secondItem="MMQ-IT-qOo" secondAttribute="width" id="AeZ-2M-8X2"/>
+                            <constraint firstItem="bMl-rN-dVc" firstAttribute="top" secondItem="NHX-W1-mNH" secondAttribute="bottom" id="Rry-tQ-IzN"/>
+                            <constraint firstItem="NHX-W1-mNH" firstAttribute="centerX" secondItem="MMQ-IT-qOo" secondAttribute="centerX" id="WP7-GQ-e2h"/>
+                            <constraint firstItem="bMl-rN-dVc" firstAttribute="width" secondItem="MMQ-IT-qOo" secondAttribute="width" id="idA-Dj-9jP"/>
+                            <constraint firstItem="bMl-rN-dVc" firstAttribute="centerX" secondItem="MMQ-IT-qOo" secondAttribute="centerX" id="y9j-6x-eWg"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Profile" id="cra-N8-TIN"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lrm-kH-fPn" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1343" y="64"/>
+            <point key="canvasLocation" x="1339" y="48"/>
         </scene>
     </scenes>
     <resources>
